--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
         </div>
     </section>
     
+    <section class="gosti">
+        <h1>Будьте нашим Гостем:</h1> <br>
+        <p>Мы предлагаем вам:</p>
+    </section>
 
     <script src="./assets/js/animation.js"></script>
 </body>
