--- a/index.html
+++ b/index.html
@@ -164,8 +164,12 @@
     </section>
     
     <section class="gosti">
-        <h1>Будьте нашим Гостем:</h1> <br>
+        <h1>Будьте нашим Гостем:</h1> <br> <br>
         <p>Мы предлагаем вам:</p>
+
+        <div class="gosti_main">
+
+        </div>
     </section>
 
     <script src="./assets/js/animation.js"></script>
