--- a/index.html
+++ b/index.html
@@ -168,7 +168,12 @@
         <p>Мы предлагаем вам:</p>
 
         <div class="gosti_main">
-
+            <div class="gosti_main-block">
+                <div class="blockk"></div>
+                <div class="blockk"></div>
+                <div class="blockk"></div>
+            </div>
+            <div class="gosti_main-block"></div>
         </div>
     </section>
 
