--- a/index.html
+++ b/index.html
@@ -173,7 +173,11 @@
                 <div class="blockk"></div>
                 <div class="blockk"></div>
             </div>
-            <div class="gosti_main-block"></div>
+            <div class="gosti_main-block">
+                <div class="blockk"></div>
+                <div class="blockk"></div>
+                <div class="blockk"></div>
+            </div>
         </div>
     </section>
 
