--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 
     <!-- scroll-reval -->
     <script src="https://unpkg.com/scrollreveal"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
+    <style>
+        .sample-slider{
+            width:70%;
+        }
+        .sample-slider img{
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -181,6 +193,33 @@
         </div>
     </section>
 
+
+    <section>
+        <div class="swiper sample-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="https://abrakadabra.fun/uploads/posts/2022-03/1646426638_1-abrakadabra-fun-p-fon-dlya-restorana-1.jpg"></div>
+                <div class="swiper-slide"><img src="https://www.ticati.com/img/hotel/3429994s.jpg"></div>
+                <div class="swiper-slide"><img src="./img/sample3.png"></div>
+                <div class="swiper-slide"><img src="./img/sample4.png"></div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+    </section>
+
+    <script>
+        const swiper = new Swiper('.sample-slider', {
+            loop: true,                         //loop
+            pagination: {                       //pagination(dots)
+                el: '.swiper-pagination',
+            },
+            navigation: {                       //navigation(arrows)
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        })
+    </script>
     <script src="./assets/js/animation.js"></script>
 </body>
 </html>
