--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <style>
         .sample-slider{
-            width:70%;
+            width:100%;
         }
         .sample-slider img{
             width: 100%;
@@ -213,7 +213,7 @@
     loop: true,
     slidesPerView: 3,
     centeredSlides: true,
-    effect: "coverflow",    //add(applying the coverflow effect)
+    effect: "coverflow",   
     pagination: {
         el: '.swiper-pagination',
     },
