--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
               
         </div>
         <div id="navbar__header1">
-            <div class="navbar__header1">
-                <a href="#">О нас</a>
+            <div class="navbar__header1 navbar">
+                <a href="#" class="navbar__active">О нас</a>
                 <a href="#">Меню</a>
                 <a href="#">Контакты</a>
             </div>
