--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <a href="#">2023 </a>
+    </footer>
+
     <script>
       const swiper = new Swiper('.sample-slider', {
     loop: true,
