--- a/index.html
+++ b/index.html
@@ -209,7 +209,15 @@
     </section>
 
     <footer class="footer">
-        <a href="#">2023 </a>
+        <a href="#">2023 stolovaya</a>
+
+        <div class="footer_nav">
+            <a href="#">О нас</a>
+            <a href="#">Меню</a>
+            <a href="#">Контакты</a>
+        </div>
+
+        <a href="#">На вверх</a>
     </footer>
 
     <script>
